wordle: fix dark mode popup

--- a/wordle/style.css
+++ b/wordle/style.css
@@ -102,8 +102,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 @keyframes popup-animation {
@@ -116,18 +115,19 @@
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: var(--color-background);
     margin: 15% auto;
     padding: 20px;
     max-width: 400px;
-    box-shadow: 0px 0px 5px 2px #888;
+    box-shadow: 0px 0px var(--border-rad) 2px var(--color-border);
     border-radius: 8px;
     animation-name: popup-animation;
     animation-duration: 1s;
 }
 
 .modal-content button {
-    background-color: gainsboro;
+    background-color: var(--color-button);
+    color: var(--color-font);
     border-style: none;
     border-radius: 8px;
     padding: 8px 12px;
@@ -145,7 +145,7 @@
 }
 
 .close {
-    color: #aaa;
+    color: var(--color-font);
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -153,7 +153,7 @@
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: var(--color-background);
     text-decoration: none;
     cursor: pointer;
 }
